--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node index.js",
+    "start:dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -29,9 +30,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.7.0",
-    "eslint": "^9.7.0",
+    "eslint": "^9.9.0",
     "globals": "^15.8.0",
     "nodemon": "^3.1.4",
-    "typescript-eslint": "^7.16.0"
+    "typescript-eslint": "^8.1.0"
   }
 }
