--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,5 +57,8 @@
     "tailwindcss": "^3.4.6",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
+  },
+  "resolutions": {
+    "rollup": "npm:@rollup/rollup-linux-x64-musl"
   }
 }
