--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,7 @@ services:
     ports:
       - "3000:3000"
     environment:
+      REACT_APP_API_URL: ${REACT_APP_API_URL}
       NODE_ENV: production
     depends_on:
       - backend
