--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,6 +11,9 @@ RUN npm install --prefer-offline --no-audit --progress=false
 # Copy the rest of the application code
 COPY . .
 
+ARG REACT_APP_API_URL
+ENV REACT_APP_API_URL=${REACT_APP_API_URL}
+
 # Build the frontend application
 RUN npm run build
 
