Docker file change

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,8 +11,8 @@ RUN npm install --prefer-offline --no-audit --progress=false
 # Copy the rest of the application code
 COPY . .
 
-ARG REACT_APP_API_URL
-ENV REACT_APP_API_URL=${REACT_APP_API_URL}
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
 
 # Build the frontend application
 RUN npm run build
