--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,8 +59,8 @@ services:
     ports:
       - "3000:3000"
     environment:
-      REACT_APP_API_URL: ${REACT_APP_API_URL}
       NODE_ENV: production
+      VITE_API_URL: ${VITE_API_URL}
     depends_on:
       - backend
 
