--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   mongo_primary:
     container_name: mongo_primary
@@ -49,6 +51,8 @@ services:
       - mongo_primary
       - mongo_secondary
       - mongo_arbiter
+    networks:
+      - app_network
 
   frontend:
     build:
@@ -63,6 +67,12 @@ services:
       VITE_API_URL: ${VITE_API_URL}
     depends_on:
       - backend
+    networks:
+      - app_network
+
+networks:
+  app_network:
+    driver: bridge
 
 volumes:
   mongo_primary:
