--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,8 @@
-version: '3.8'
+version: "3.8"
+
+networks:
+  app_network:
+    driver: bridge
 
 services:
   mongo_primary:
@@ -9,6 +13,8 @@ services:
     command: ["mongod", "--replSet", "rs0"]
     volumes:
       - mongo_primary:/data/db
+    networks:
+      - app_network
 
   mongo_secondary:
     container_name: mongo_secondary
@@ -18,15 +24,19 @@ services:
     command: ["mongod", "--replSet", "rs0"]
     volumes:
       - mongo_secondary:/data/db
+    networks:
+      - app_network
 
   mongo_arbiter:
     container_name: mongo_arbiter
     image: mongo:latest
     ports:
       - "27019:27017"
-    command: ["/usr/bin/mongod", "--bind_ip_all", "--replSet", "rs0"]
+    command: ["mongod", "--replSet", "rs0"]
     volumes:
       - mongo_arbiter:/data/db
+    networks:
+      - app_network
 
   backend:
     build:
@@ -37,19 +47,19 @@ services:
     ports:
       - "5000:5000"
     environment:
-      MONGO_URI: ${MONGO_URI}
-      PORT: ${PORT}
-      SECRET_KEY: ${SECRET_KEY}
-      NODE_ENV: ${NODE_ENV}
-      CLIENT_ORIGIN: ${CLIENT_ORIGIN}
-      ADMIN_USERNAME: ${ADMIN_USERNAME}
-      ADMIN_PASSWORD: ${ADMIN_PASSWORD}
+      MONGO_URI: mongodb://mongo_primary:27017,mongo_secondary:27017/?replicaSet=rs0
+      PORT: 5000
+      SECRET_KEY: your_secret_key
+      NODE_ENV: development
+      CLIENT_ORIGIN: http://localhost:3000
+      ADMIN_USERNAME: admin
+      ADMIN_PASSWORD: password
+    networks:
+      - app_network
     depends_on:
       - mongo_primary
       - mongo_secondary
       - mongo_arbiter
-    networks:
-      - app_network
 
   frontend:
     build:
@@ -61,15 +71,10 @@ services:
       - "3000:3000"
     environment:
       NODE_ENV: production
-      VITE_API_URL: ${VITE_API_URL}
     depends_on:
       - backend
     networks:
       - app_network
-
-networks:
-  app_network:
-    driver: bridge
 
 volumes:
   mongo_primary:
