--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,13 +60,13 @@ services:
     ports:
       - "5000:5000"
     environment:
-      MONGO_URI: mongodb://mongo_primary:27017,mongo_secondary:27017/?replicaSet=rs0
-      PORT: 5000
-      SECRET_KEY: your_secret_key
-      NODE_ENV: development
-      CLIENT_ORIGIN: http://localhost:3000
-      ADMIN_USERNAME: admin
-      ADMIN_PASSWORD: password
+      MONGO_URI: ${MONGO_URI}
+      PORT: ${PORT}
+      SECRET_KEY: ${SECRET_KEY}
+      NODE_ENV: ${NODE_ENV}
+      CLIENT_ORIGIN: ${CLIENT_ORIGIN}
+      ADMIN_USERNAME: ${ADMIN_USERNAME}
+      ADMIN_PASSWORD: ${ADMIN_PASSWORD}
     networks:
       - app_network
     depends_on:
